seedboxk8s/applications/sabnzbd/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - image: linuxserver/sabnzbd
          name: sabnzbd
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: sabnzbd-config-pvc
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-sabnzbd-pvc
