seedboxk8s/applications/sabnzbd/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  namespace: tortuga
spec:
  replicas: 1
  serviceName: sabnzbd
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-sabnzbd/releases
        - image: ghcr.io/linuxserver/sabnzbd:5.1.3-ls275
          name: sabnzbd
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: sabnzbd-config-pvc
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
