seedboxk8s/applications/sabnzbd/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
