seedboxk8s/applications/sabnzbd/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: SABnzbd
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: sabnzbd
    gethomepage.dev/href: https://sabnzbd.${productionClusterFqdn}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: sabnzbd
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
